# superset-mcp

./: .gitignore  Dockerfile  Dockerfile.sql-executor  README.md  dashboard_data.sql  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml
superset/: Dockerfile  superset-init.sh  superset_config.py
superset_mcp_server/: mcp_methods.json  mcp_server.py  open_api_spec_parser.py  openapi_spec.json  superset_client.py
